# autosar_tool

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MILESTONES.md  NOTICE.md  PLAN.md  PLAN_v0.2.md  README.md
core/: pyproject.toml
core/Common/: ArgParser.py  BswBase.py  CodeGenerator.py  ConfigParser.py  Constant.py  Context.py  PerformanceMonitor.py  Public.py  Utils.py  __init__.py
core/Common/arxmlparse/: loader.py
core/Common/arxmlparse/artop/: __init__.py
core/Common/arxmlparse/constant/: BswPathConstant.py
core/Common/base/: BaseDecorator.py
core/Common/templates/: Template_Base.jinja
core/tests/: test_imports.py  test_memif_derive.py  test_refs.py
generator/: __init__.py  __main__.py  bswgen.spec  pyproject.toml
generator/Common/: arxmlparse.py
generator/Common/arxmlparse/constant/: BswConstant.py  CommonConstant.py  SwcConstant.py
generator/Common/arxmlparse/utils/: ObjectUtil.py  __init__.py
generator/modules/Det/base/: DetCodeGenerator.py  DetContext.py  DetRegister.py
generator/modules/Det/src/: Det.py  DetConfigSet.py  DetGeneral.py  DetNotification.py
generator/modules/Det/templates/: Det_Bswmd_arxml.jinja  Det_Cfg_c.jinja  Det_Cfg_h.jinja  Det_Externals_c.jinja  Det_Externals_h.jinja  (+1 more)
generator/tests/: test_det_generation.py  test_memif_generation.py  test_no_config_graceful.py  test_nvm_partial.py
validator/: __init__.py  __main__.py  bswval.spec  pyproject.toml
validator/Bsw/MemIf/: MemIfMessages.json  MemIfRegister.py  MemIfRules.py
validator/Common/: PerformanceMonitor.py
validator/Common/utils/: DirUtils.py  __init__.py
validator/modules/MemIf/: MemIfMessages.json  MemIfRules.py
validator/tests/: test_memif_validator.py
(+2414 files in other folders)
